--- a/mod2/index.html
+++ b/mod2/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+	<h1 class="pagetitle">Our Menu</h1>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-12">
 			<div class="container">
